--- a/index.html
+++ b/index.html
@@ -3,20 +3,39 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title data-t="site.title"></title>
+    <title data-t="site.title">Multilingual PHP Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         body {
-            font-family: 'Segoe UI', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
         }
 
         .hero-section {
             background: linear-gradient(135deg, #0d6efd, #6610f2);
             color: white;
-            padding: 80px 0;
+            padding: 100px 0;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.1);
+            z-index: 1;
+        }
+
+        .hero-section .container {
+            position: relative;
+            z-index: 2;
         }
 
         .lang-select {
@@ -25,6 +44,32 @@
             right: 20px;
             width: 150px;
             z-index: 1000;
+        }
+
+        .lang-select select {
+            border-radius: 8px;
+            padding: 8px;
+            font-size: 14px;
+        }
+
+        .navbar {
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-brand {
+            font-size: 1.5rem;
+            color: #0d6efd !important;
+        }
+
+        .nav-link {
+            font-weight: 500;
+            color: #333 !important;
+            transition: color 0.3s;
+        }
+
+        .nav-link:hover {
+            color: #0d6efd !important;
         }
 
         footer {
@@ -37,16 +82,72 @@
             font-size: 40px;
             color: #0d6efd;
             margin-bottom: 15px;
+            transition: transform 0.3s;
+        }
+
+        .card:hover .card-icon {
+            transform: scale(1.2);
         }
 
         .section-title {
             margin-bottom: 40px;
         }
+
+        .card {
+            border: none;
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .btn-primary {
+            border-radius: 50px;
+            padding: 10px 30px;
+        }
+
+        .btn-outline-primary,
+        .btn-outline-success,
+        .btn-outline-warning {
+            border-radius: 50px;
+            padding: 8px 20px;
+        }
+
+        footer p {
+            margin-bottom: 8px;
+            font-size: 0.9rem;
+        }
+
+        footer a {
+            color: #0d6efd;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            .hero-section {
+                padding: 60px 0;
+            }
+
+            .hero-section h1 {
+                font-size: 2.5rem;
+            }
+
+            .lang-select {
+                width: 120px;
+                top: 10px;
+                right: 10px;
+            }
+        }
     </style>
 </head>
 
 <body>
-
     <!-- Language Selector -->
     <div class="lang-select">
         <select id="langSwitcher" class="form-select">
@@ -59,16 +160,17 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#" data-t="navbar.brand"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <a class="navbar-brand fw-bold" href="#" data-t="navbar.brand">MyCompany</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.home"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.about"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.services"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.contact"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-t="navbar.contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -77,41 +179,41 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="display-4 fw-bold" data-t="hero.title"></h1>
-            <p class="lead" data-t="hero.subtitle"></p>
-            <button class="btn btn-light btn-lg mt-3 px-4" data-t="hero.button"></button>
+            <h1 class="display-4 fw-bold" data-t="hero.title">Welcome to our multilingual site!</h1>
+            <p class="lead" data-t="hero.subtitle">We create multilingual, modern websites using PHP.</p>
+            <button class="btn btn-light btn-lg mt-3 px-4" data-t="hero.button">Get Started</button>
         </div>
     </section>
 
     <!-- Features Cards -->
     <section class="container my-5">
         <div class="text-center section-title">
-            <h2 class="fw-bold" data-t="features.title"></h2>
-            <p data-t="features.desc"></p>
+            <h2 class="fw-bold" data-t="features.title">Our Features</h2>
+            <p data-t="features.desc">Discover what makes us stand out.</p>
         </div>
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card h-100 text-center p-4 shadow-sm">
                     <i class="bi bi-lightning-fill card-icon"></i>
-                    <h5 data-t="card.title"></h5>
-                    <p data-t="card.description"></p>
-                    <a href="#" class="btn btn-outline-primary mt-auto" data-t="card.button"></a>
+                    <h5 data-t="card.title">Fast Development</h5>
+                    <p data-t="card.description">We build fast, clean PHP applications.</p>
+                    <a href="#" class="btn btn-outline-primary mt-auto" data-t="card.button">Read More</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card h-100 text-center p-4 shadow-sm">
                     <i class="bi bi-boxes card-icon"></i>
-                    <h5 data-t="card2.title"></h5>
-                    <p data-t="card2.description"></p>
-                    <a href="#" class="btn btn-outline-success mt-auto" data-t="card2.button"></a>
+                    <h5 data-t="card2.title">Powerful Features</h5>
+                    <p data-t="card2.description">We offer all modern features in one platform.</p>
+                    <a href="#" class="btn btn-outline-success mt-auto" data-t="card2.button">Explore</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card h-100 text-center p-4 shadow-sm">
                     <i class="bi bi-shield-lock-fill card-icon"></i>
-                    <h5 data-t="card3.title"></h5>
-                    <p data-t="card3.description"></p>
-                    <a href="#" class="btn btn-outline-warning mt-auto" data-t="card3.button"></a>
+                    <h5 data-t="card3.title">Secure Systems</h5>
+                    <p data-t="card3.description">Your data is safe with our secure architecture.</p>
+                    <a href="#" class="btn btn-outline-warning mt-auto" data-t="card3.button">Secure Now</a>
                 </div>
             </div>
         </div>
@@ -121,25 +223,25 @@
     <section class="py-5 bg-light">
         <div class="container">
             <div class="text-center mb-4">
-                <h2 data-t="contact.title"></h2>
+                <h2 data-t="contact.title">Contact Us</h2>
             </div>
             <form>
                 <div class="row g-3">
                     <div class="col-md-6">
-                        <label for="name" class="form-label" data-t="contact.nameLabel"></label>
+                        <label for="name" class="form-label" data-t="contact.nameLabel">Name</label>
                         <input type="text" class="form-control" id="name" placeholder="John Doe">
                     </div>
                     <div class="col-md-6">
-                        <label for="email" class="form-label" data-t="contact.emailLabel"></label>
+                        <label for="email" class="form-label" data-t="contact.emailLabel">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="you@example.com">
                     </div>
                     <div class="col-12">
-                        <label for="message" class="form-label" data-t="contact.messageLabel"></label>
+                        <label for="message" class="form-label" data-t="contact.messageLabel">Message</label>
                         <textarea class="form-control" id="message" rows="5" placeholder="Your message..."></textarea>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <button type="submit" class="btn btn-primary px-5" data-t="contact.sendButton"></button>
+                    <button type="submit" class="btn btn-primary px-5" data-t="contact.sendButton">Send Message</button>
                 </div>
             </form>
         </div>
@@ -148,10 +250,10 @@
     <!-- Footer -->
     <footer class="text-center">
         <div class="container">
-            <p class="mb-1" data-t="footer.contact"></p>
-            <p class="mb-1" data-t="footer.about"></p>
-            <p class="mb-1" data-t="footer.terms"></p>
-            <p class="mb-0" data-t="footer.copyright"></p>
+            <p class="mb-1" data-t="footer.contact">Need help? Contact us anytime.</p>
+            <p class="mb-1" data-t="footer.about"><a href="#">About our company</a></p>
+            <p class="mb-1" data-t="footer.terms"><a href="#">Terms & Conditions</a></p>
+            <p class="mb-0" data-t="footer.copyright">© 2025 All rights reserved.</p>
         </div>
     </footer>
 
