--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="x-icon" href="https://iqbolshoh.uz/favicon.ico">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -35,8 +36,8 @@
         <div class="lang-select">
             <select id="langSwitcher" class="form-select">
                 <option value="en">English</option>
-                <option value="uz">O‘zbekcha</option>
                 <option value="ru">Русский</option>
+                <option value="uz">O‘zbekcha</option>
                 <option value="tj">Тоҷикӣ</option>
             </select>
         </div>
