--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
@@ -126,7 +125,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lang/change.js"></script>
+    <script src="lang.js"></script>
 </body>
 
 </html>
